input_adaptive_includes += include_directories('.')

# subdir('codechandler')
subdir('common')
# subdir('decrypters')
subdir('parser')
subdir('samplereader')
subdir('utils')

input_adaptive_sources += files(
  'AdaptiveByteStream.cpp',
  # 'main.cpp',
  'oscompat.cpp',
  'Session.cpp',
  'Stream.cpp',
  'TSReader.cpp',
  'aes_decrypter.cpp',
  'ADTSReader.cpp',
  'WebmReader.cpp',
)
