
input_adaptive_includes += include_directories('.')

input_adaptive_sources += files(
  'CodecHandler.cpp',
  'AudioCodecHandler.cpp',
  'AV1CodecHandler.cpp',
  'AVCCodecHandler.cpp',
  'HEVCCodecHandler.cpp',
  'TTMLCodecHandler.cpp',
  'VP9CodecHandler.cpp',
  'WebVTTCodecHandler.cpp',
  'ttml/TTML.cpp'
)
