
input_adaptive_includes += include_directories('.')

input_adaptive_sources += files(
  'AdaptationSet.cpp',
  'AdaptiveCencSampleDecrypter.cpp',
  'AdaptiveStream.cpp',
  'AdaptiveTree.cpp',
  'AdaptiveTreeFactory.cpp',
  'AdaptiveUtils.cpp',
  'Chooser.cpp',
  'ChooserAskQuality.cpp',
  'ChooserDefault.cpp',
  'ChooserFixedRes.cpp',
  'ChooserManualOSD.cpp',
  'ChooserTest.cpp',
  'CommonAttribs.cpp',
  'CommonSegAttribs.cpp',
  'Period.cpp',
  'Representation.cpp',
  'ReprSelector.cpp',
  'Segment.cpp',
  'SegmentBase.cpp',
  'SegmentList.cpp',
  'SegTemplate.cpp',
)
