
input_adaptive_sources += files(
  'Base64Utils.cpp',
  'CharArrayParser.cpp',
  'CurlUtils.cpp',
  'DigestMD5Utils.cpp',
  'FileUtils.cpp',
  'PropertiesUtils.cpp',
  'StringUtils.cpp',
  'SettingsUtils.cpp',
  'UrlUtils.cpp',
  'Utils.cpp',
  'XMLUtils.cpp',
)

input_adaptive_includes += include_directories('.')
