
webm_parser_sources += files(
'ancestory.cc',
'bit_utils.cc',
'block_header_parser.cc',
'block_parser.cc',
'buffer_reader.cc',
'callback.cc',
'date_parser.cc',
'file_reader.cc',
'float_parser.cc',
'id_element_parser.cc',
'id_parser.cc',
'istream_reader.cc',
'master_parser.cc',
'parser_utils.cc',
'segment_parser.cc',
'size_parser.cc',
'skip_parser.cc',
'unknown_parser.cc',
'var_int_parser.cc',
'virtual_block_parser.cc',
'void_parser.cc',
'webm_parser.cc',
)

# webm_parser_includes += include_directories('.')
