input_adaptive_init_includes += include_directories('.')

# subdir('common')

input_adaptive_init_sources += files(
  'Filesystem.cpp',
  'File.cpp',
  'IFile.cpp',
  # 'FileItem.cpp',
  'URL.cpp',
  # 'IDirectory.cpp',
  # 'Directory.cpp',
  'FileFactory.cpp',
  'CurlFile.cpp',
  'DllLibCurl.cpp',
  '../platform/posix/filesystem/PosixFile.cpp',
  '../platform/posix/threads/RecursiveMutex.cpp'
)
