input_adaptive_includes += include_directories('.')

# subdir('common')

input_adaptive_init_sources += files(
  'HttpHeader.cpp',
  'UrlOptions.cpp',
  'StringUtils.cpp',
  'URIUtils.cpp',
  'XTimeUtils.cpp',
  'PosixTimezone.cpp',
  'Variant.cpp',
  'BitstreamStats.cpp',
  'TimeUtils.cpp',
  'RingBuffer.cpp',
  'CharsetConverter.cpp',
  'Utf8Utils.cpp',
  'Base64.cpp'
)
