input_adaptive_includes += include_directories('.')

input_adaptive_sources += files(
    'Ap4Ac3Parser.cpp',
    'Ap4Ac4Parser.cpp',
    'Ap4AdtsParser.cpp',
    'Ap4AvcParser.cpp',
    'Ap4BitStream.cpp',
    'Ap4Eac3Parser.cpp',
    'Ap4HevcParser.cpp',
    'Ap4Mp4AudioInfo.cpp',
    'Ap4NalParser.cpp',
)


