input_adaptive_includes += include_directories('.')
ap4_includes += include_directories('.')

input_adaptive_sources += files(
'Ap48bdlAtom.cpp',
'Ap4Dac3Atom.cpp',
'Ap4FileWriter.cpp',
'Ap4Marlin.cpp',            
'Ap4PdinAtom.cpp',           
'Ap4SdpAtom.cpp',               
'Ap4TencAtom.cpp',
'Ap4Ac4Utils.cpp',          
'Ap4Dac4Atom.cpp',                       
'Ap4FragmentSampleTable.cpp',  
'Ap4MdhdAtom.cpp',          
'Ap4Piff.cpp',               
'Ap4SegmentBuilder.cpp',        
'Ap4TfdtAtom.cpp',
'Ap4AinfAtom.cpp',          
'Ap4DataBuffer.cpp',                     
'Ap4FrmaAtom.cpp',             
'Ap4MehdAtom.cpp',          
'Ap4Processor.cpp',          
'Ap4SencAtom.cpp',              
'Ap4TfhdAtom.cpp',
'Ap4Atom.cpp',              
'Ap4Debug.cpp',                          
'Ap4FtypAtom.cpp',             
'Ap4MfhdAtom.cpp',          
'Ap4Protection.cpp',         
'Ap4SgpdAtom.cpp',              
'Ap4TfraAtom.cpp',
'Ap4AtomFactory.cpp',       
'Ap4Dec3Atom.cpp',                       
'Ap4GrpiAtom.cpp',             
'Ap4MfroAtom.cpp',          
'Ap4PsshAtom.cpp',           
'Ap4SidxAtom.cpp',              
'Ap4TimsAtom.cpp',
'Ap4AtomSampleTable.cpp',   
'Ap4DecoderConfigDescriptor.cpp',        
'Ap4HdlrAtom.cpp',            
'Ap4MoovAtom.cpp',          
'Ap4Results.cpp',            
'Ap4SLConfigDescriptor.cpp',    
'Ap4TkhdAtom.cpp',
'Ap4Av1cAtom.cpp',          
'Ap4DecoderSpecificInfoDescriptor.cpp',  
'Ap4HintTrackReader.cpp',      
'Ap4Movie.cpp',             
'Ap4RtpAtom.cpp',            
'Ap4SmhdAtom.cpp',              
'Ap4Track.cpp',
'Ap4AvccAtom.cpp',          
'Ap4Descriptor.cpp',                    
'Ap4HmhdAtom.cpp',             
'Ap4MovieFragment.cpp',    
'Ap4RtpHint.cpp',            
'Ap4StcoAtom.cpp',              
'Ap4TrakAtom.cpp',
'Ap4BlocAtom.cpp',          
'Ap4DescriptorFactory.cpp',              
'Ap4HvccAtom.cpp',             
'Ap4Mpeg2Ts.cpp',           
'Ap4SaioAtom.cpp',           
'Ap4SthdAtom.cpp',              
'Ap4TrefTypeAtom.cpp',
'Ap4ByteStream.cpp',       
'Ap4DrefAtom.cpp',                       
'Ap4IkmsAtom.cpp',             
'Ap4MvhdAtom.cpp',          
'Ap4SaizAtom.cpp',           
'Ap4String.cpp',                
'Ap4TrexAtom.cpp',
'Ap4Co64Atom.cpp',          
'Ap4DvccAtom.cpp',                       
'Ap4IodsAtom.cpp',             
'Ap4NmhdAtom.cpp',          
'Ap4Sample.cpp',             
'Ap4StscAtom.cpp',              
'Ap4TrunAtom.cpp',
'Ap4Command.cpp',           
'Ap4ElstAtom.cpp',                       
'Ap4Ipmp.cpp',                 
'Ap4ObjectDescriptor.cpp',  
'Ap4SampleDescription.cpp',  
'Ap4StsdAtom.cpp',              
'Ap4UrlAtom.cpp',
'Ap4CommandFactory.cpp',    
'Ap4EsDescriptor.cpp',                   
'Ap4IproAtom.cpp',             
'Ap4OdafAtom.cpp',          
'Ap4SampleEntry.cpp',        
'Ap4StssAtom.cpp',              
'Ap4Utils.cpp',
'Ap4CommonEncryption.cpp',  
'Ap4EsdsAtom.cpp',                       
'Ap4IsfmAtom.cpp',             
'Ap4OddaAtom.cpp',          
'Ap4SampleSource.cpp',       
'Ap4StszAtom.cpp',              
'Ap4UuidAtom.cpp',
'Ap4ContainerAtom.cpp',     
'Ap4Expandable.cpp',                     
'Ap4IsltAtom.cpp',             
'Ap4OdheAtom.cpp',          
'Ap4SampleTable.cpp',        
'Ap4SttsAtom.cpp',              
'Ap4VmhdAtom.cpp',
'Ap4.cpp',                  
'Ap4FileCopier.cpp',                     
'Ap4IsmaCryp.cpp',             
'Ap4OhdrAtom.cpp',          
'Ap4SbgpAtom.cpp',           
'Ap4Stz2Atom.cpp',              
'Ap4VpccAtom.cpp',
'Ap4CttsAtom.cpp',          
'Ap4File.cpp',                           
'Ap4LinearReader.cpp',         
'Ap4OmaDcf.cpp',            
'Ap4SchmAtom.cpp',           
'Ap4SyntheticSampleTable.cpp',
)


